--- a/projects.json
+++ b/projects.json
@@ -2,29 +2,46 @@
   {
     "ProjectRoot": "C:\\Users\\aquar\\OneDrive\\Documents\\QuikScripts\\python\\push2pc\\s3-html\\",
     "BucketName": "pccommander.net",
-    "DistributionId": "ETFTX83TEXR9E"
+    "DistributionId": "ETFTX83TEXR9E",
+    "SyncJustChanges": true
   },
   {
     "ProjectRoot": "C:\\Users\\aquar\\OneDrive\\Documents\\QuikScripts\\python\\push2pc\\s3-html\\",
     "BucketName": "pcpusher.net",
-    "DistributionId": "EP27B6D78GFXA"
+    "DistributionId": "EP27B6D78GFXA",
+    "SyncJustChanges": true
   },
   {
     "BucketName": "lazyspaniard.com",
     "DistributionId": "ET6563VBPVOSK",
-    "ProjectRoot": null
+    "ProjectRoot": "C:\\Users\\aquar\\OneDrive\\Documents\\QuikScripts\\html-projects\\lazyspaniard.com\\html",
+    "SyncJustChanges": true
+  },
+  {
+    "NoteToSelf": "The above are the ones I'm currently using on my personal laptop."
   },
   {
     "NoteToSelf": "Thought I could use this to make it easier to run the ps1 script but my current approach (splatting) requires it to be imported, converted from JSON, converted to hashtable (my personal function), THEN splatted, which is too many steps.  I'll just rely on the batch file approach for now."
   },
   {
+    "NoteToSelf": "Below are the ones I'm currently using on my work laptop."
+  },
+  {
+    "BucketName": "lazyspaniard.com",
+    "DistributionId": "ET6563VBPVOSK",
+    "ProjectRoot": "C:\\Scripts\\html-projects\\lazyspaniard.com\\html",
+    "SyncJustChanges": true
+  },
+  {
     "ProjectRoot": "C:\\Users\\v-dreategui\\OneDrive - Microsoft\\Documents\\personal\\projects\\pcpusher\\s3-html\\",
     "BucketName": "pcpusher.net",
-    "DistributionId": "EP27B6D78GFXA"
+    "DistributionId": "EP27B6D78GFXA",
+    "SyncJustChanges": true
   },
   {
     "ProjectRoot": "C:\\Users\\v-dreategui\\OneDrive - Microsoft\\Documents\\personal\\projects\\pcpusher\\s3-html\\",
     "BucketName": "pccommander.net",
-    "DistributionId": "ETFTX83TEXR9E"
+    "DistributionId": "ETFTX83TEXR9E",
+    "SyncJustChanges": true
   }
 ]
